--- a/config/projects.json
+++ b/config/projects.json
@@ -10,5 +10,8 @@
 	},
 	"Default": {
 		"projectPath": "C:/Users/Admin/Documents/maya/projects/default"
+	},
+	"MyMilk": {
+		"projectPath": "Z:/Job_2/MyMilk/maya"
 	}
 }
