Get smedge pools snippet

--- a/config/projects.json
+++ b/config/projects.json
@@ -1,12 +1,12 @@
 {
+    "Alpenliebe Ice Cream": {
+        "projectPath": "Z:/Job_2/Alpenliebe Ice Cream/3D"
+    }, 
     "Alpenliebe Jelly TVC": {
         "projectPath": "Z:/Job_2/Alpenliebe Jelly TVC/maya"
     }, 
     "Alpenliebe Thematic": {
         "projectPath": "Z:/Job_2/Alpenliebe Thematic/Maya"
-    }, 
-    "Amstel": {
-        "projectPath": "Z:/Job_2/Amstel/maya"
     }, 
     "Default": {
         "projectPath": "C:/Users/Admin/Documents/maya/projects/default"
