Added local file for projects

--- a/config/projects.json
+++ b/config/projects.json
@@ -13,5 +13,8 @@
     }, 
     "TVshow": {
         "projectPath": "Z:/Job_1/TVshow/maya"
+    }, 
+    "WhiteCastle": {
+        "projectPath": "Z:/Job_2/WhiteCastle/3D"
     }
 }
